Added a short introduction to thesis

--- a/Thesis/project.tex
+++ b/Thesis/project.tex
@@ -51,7 +51,7 @@
 
 %opening
 \title{Programming Project 03}
-\author{Francèl Lamprecht, Christine Robinson, Regina Wehler}
+\author{Francel Lamprecht, Christine Robinson, Regina Wehler}
 \date{Winter Semester 2018/19}
 
 \begin{document}
@@ -61,7 +61,14 @@
 \tableofcontents
 \clearpage
 \section{Introduction}
-This is a dummy sentence that shows how citations work \citep{Adams.2018}.
+**REMOVE LATER!This is a dummy sentence that shows how citations work \citep{Adams.2018}.**
+
+Plant phenotyping is a research  area in the plant sciences that focuses on the quantitative measurement of both functional and structural properties of plants. During the last decade plant phenotyping evolved to non-destructive, image-analysis-based phenotyping. This computer driven approach allows the characterization of plants in a high-throughput manner \citep{Walter.2015}.
+
+The focus of this plant phenotyping research project was on the processing, segmentation and classification of Arabidopsis, to gain valuable insight on how the image-analysis-based phenotyping in the life sciences works. 
+
+Arabidopsis is often used as a model plant, as the plant is small in size, with a rapid life cycle of about six weeks \citep{Koornneef.2010}. Arabidopsis is a rosette plant, with the individual leaves being on separate, distinguishable stems. This characteristic of Arabidopsis makes leaf separation from each other less complex.  Given that we were only exploring viable methods in this research area, Arabidopsis was our chosen plant, as it gave us the opportunity to explore with different algorithms in an easier way than what the other given data set, Tobacco, would have allowed us to do. 
+
 
 
 \section{Methodology}
