--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -43,3 +43,29 @@
 }
 
 
+@article{Walter.2015,
+ abstract = {Plant phenotyping refers to a quantitative description of the plant's anatomical, ontogenetical, physiological and biochemical properties. Today, rapid developments are taking place in the field of non-destructive, image-analysis -based phenotyping that allow for a characterization of plant traits in high-throughput. During the last decade, `the field of image-based phenotyping has broadened its focus from the initial characterization of single-plant traits in controlled conditions towards `real-life' applications of robust field techniques in plant plots and canopies. An important component of successful phenotyping approaches is the holistic characterization of plant performance that can be achieved with several methodologies, ranging from multispectral image analyses via thermographical analyses to growth measurements, also taking root phenotypes into account.},
+ author = {Walter, Achim and Liebisch, Frank and Hund, Andreas},
+ year = {2015},
+ title = {Plant phenotyping: from bean weighing to image analysis},
+ pages = {14},
+ volume = {11},
+ number = {1},
+ journal = {Plant Methods},
+ doi = {10.1186/s13007-015-0056-8}
+}
+
+
+
+@article{Koornneef.2010,
+
+abstract = {Summary Twenty-five years ago, Arabidopsis thaliana emerged as the model organism of choice for research in plant biology. A consensus was reached about the need to focus on a single organism to integrate the classical disciplines of plant science with the expanding fields of genetics and molecular biology. Ten years after publication of its genome sequence, Arabidopsis remains the standard reference plant for all of biology. We reflect here on the major advances and shared resources that led to the extraordinary growth of the Arabidopsis research community. We also underscore the importance of continuing to expand and refine our detailed knowledge of Arabidopsis while seeking to appreciate the remarkable diversity that characterizes the plant kingdom.},
+author = {Koornneef, Maarten and Meinke, David},
+year = {2010},
+title = {The development of Arabidopsis as a model plant},
+pages = {909-921},
+volume = {61},
+number = {6},
+journal = {The Plant Journal},
+}
+
