task03 and changes to thesis

--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -69,3 +69,11 @@ number = {6},
 journal = {The Plant Journal},
 }
 
+@book{Ferreira.2012,
+
+Author = {Ferreira, Tiago and Rasband, Wayne},
+year = {2012},
+title = {ImageJ User Guide},
+pages = {133 - 138},
+
+}
