--- a/Thesis/project.tex
+++ b/Thesis/project.tex
@@ -113,7 +113,51 @@ The plant is separated from the background with the help of a trainable Weka seg
 A plant consists of leaves that are attached to each other. To be able to analyze leaves individually, they need to be separated. Here, the watershed algorithm was used to separate touching objects. The algorithm first calculates an Euclidean distance map and determines center points as points which are, from a topological view, the ultimate eroded points, As the algorithm's name indicates, this topological map is "flooded" with water and at each collision of two "watersheds", a line separating two objects is drawn. The output of the algorithm is the binary image with added watershed lines (figure \ref{fig:pipeline}-c). 
 
 \subsection{Object Analysis}
-Particle Analyzer and additional stuff until csv export
+After an image was subjected to aforementioned steps, the resulting watershed image was then analyzed with Fiji's  "Analyze Particles" command. The measurements that were selected to be performed during the particle analysis are:
+\begin{itemize}
+\item Area - Measures the area of selection in square pixels. This was used to obtain the object's size.
+\item Standard deviation - Used to generate the mean gray value. It is the standard deviation of the grey values.
+\item Mean gray value - Average gray value of the selection, which is used in the calculation of the average brightness.
+\item Modal gray value - Most frequently occurring gray value within the selection. This will always be 255 when the analysis is done on the watershed image.
+\item Min and Max gray value - The minimum and maximum gray value of the selection.
+\item Perimeter - An alternative way to define the size of an object as it is the length of the outside boundary of the selection.
+\item Centroid - This gives us the center point of the selection and uses the average X and Y coordinates for all the pixels in the selection or image.
+\item Bounding rectangle - This smallest possible rectangle that encloses the selection. It gives the X and Y coordinates in respect of the upper left corner of the rectangle, as well as the height and width, from which we will calculate the height-width ratio from.
+\item Shape descriptors - These descriptors are used to attain the roundness of each object.
+\item Feret's diameter - Can be used to find the longest distance between any two points on the selection boundary.
+\item Integrated density- Used to indicate the sum of the brightness, as it sums the values of the pixels in the image or selection
+\item Median - Gives the median value of the pixels in the image or selection.
+\item Display labels - Selected to have an easy way to find the image name, as well the object ID.
+\end{itemize}
+
+Particles with a pixel size less than 70 were excluded from the "Analyze Particles" command. The value of 70 was established by trial and error, by inspecting the lines drawn by the watershed algorithm to separate objects.
+
+Fiji automatically generates a Results Table, with the selected measurements. These results can be accessed by using the \textit{getResultsTable() }method in the source code, to select the appropriate results for further use. By using this method a csv file with all the results deemed necessary was created. 
+
+The generated Results Table results ("columns") that were included in the csv file can be seen in Table \ref{tab: result_table}.
+\begin{table}[htbp]
+	\centering
+	\caption{Measurement options, Results Table results and the corresponding value in the csv file.} \label{table: Table 2}
+	\begin{tabular}{lll}
+		\toprule
+		Measurement option & Results Table results  & Corresponding value in the csv file \\
+		\midrule
+		 Display Labels & Index and Label & objectID and imageID\\
+		Area & Area & size\\
+		Centroid & X and Y & pos x and pos y\\
+		Shape descriptors & Round & roundness\\
+        	Integrated density & RawIntDen & brightness sum\\
+      		Mean gray value & Mean & brightness average\\
+       		Bounding rectangle  & Width and Height & width and height ratio\\
+        	\bottomrule
+	\end{tabular}
+	\label{tab: result_table}
+\end{table}
+
+
+As brightness values calculated from binary watershed images is insufficient for plants, Fiji's "Analyze Particles" command was also applied to the original RGB images. The brightness (both the sum and the average) of each of the three color channels (red, green and blue) were individually calculated. These individual channel results were then added together to calculate the sum of the brightness and average brightness for each object. To ensure computational efficiency not all the measurements were selected again, as this would have resulted in the duplication of results, eg. the size of the objects will remain constant, it is independent of the type of input image. The measurements that were necessary to be applied to the original RGB images, are the mean gray value and the integrated density. Results regarding the brightness of each color channel were attained and added to the csv file. 
+
+An additional requirement of the project was to include the width to height ratio. As this is not a built-in measurement option in Fiji, the width and the height that were included in the Results Table, as part of the "Bounding rectangle" measurement were extracted and the ratio was calculated, by dividing the leaf width by the leaf height. The calculated width to height ratio was added to the csv file to be available for further use. 
 
 \subsection{Explorative Data Analysis}
 Everything in Python
@@ -123,6 +167,8 @@ Everything in Python
 
 \section{Discussion \& Outlook}
 - watershed is working best for circular objects, that's why it sometimes fails on leaves with long stems
+
+Most of the decisions made about which measurements to include in the Fiji generated Results Table became clear when reading the ImageJ documentation. \citep{Ferreira.2012}. One decision that was needed to be made, was whether to take an object's position from the the top left appearing pixel or from the centroid. In this project we used the centroid to indicate the object's position, as the top left appearing pixel position has no advantage over the centroid. By using the centroid positions, we ensured that the position coordinates are more robust to rotations. If the top left appearing pixel was used, problems could arrive if the leaves were to be rotated. 
 
 
 
