--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -77,3 +77,11 @@ title = {ImageJ User Guide},
 pages = {133 - 138},
 
 }
+@book{Wirth.2004,
+
+Author = {Wirth, Michael A.},
+year = {2004},
+title = {Shape Analysis and Measurement},
+pages = {30},
+
+}
